[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://sprites/ui_arrow.png" type="Texture" id=2]
[ext_resource path="res://scripts/SeedSelect.gd" type="Script" id=4]

[node name="SeedSelect" type="HBoxContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -16.0
theme = ExtResource( 1 )
alignment = 1
script = ExtResource( 4 )

[node name="LeftIndicator" type="HBoxContainer" parent="."]
visible = false
margin_left = 135.0
margin_right = 155.0
margin_bottom = 16.0
alignment = 1

[node name="Arrow" type="TextureRect" parent="LeftIndicator"]
margin_right = 5.0
margin_bottom = 16.0
texture = ExtResource( 2 )
stretch_mode = 4
flip_h = true

[node name="Label" type="Label" parent="LeftIndicator"]
margin_left = 9.0
margin_top = 2.0
margin_right = 20.0
margin_bottom = 13.0
text = "L1"
valign = 1

[node name="SeedContainer" type="HBoxContainer" parent="."]
margin_left = 160.0
margin_right = 160.0
margin_bottom = 16.0

[node name="RightIndicator" type="HBoxContainer" parent="."]
visible = false
margin_left = 151.0
margin_right = 172.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="RightIndicator"]
margin_top = 2.0
margin_right = 12.0
margin_bottom = 13.0
text = "R1"
valign = 1

[node name="Arrow" type="TextureRect" parent="RightIndicator"]
margin_left = 16.0
margin_right = 21.0
margin_bottom = 16.0
texture = ExtResource( 2 )
stretch_mode = 4
